--- a/templates/admin/admin_client_list.html
+++ b/templates/admin/admin_client_list.html
@@ -42,7 +42,7 @@
       <div class="col-xs-12">
         <div class="box">
           <a href="{% url 'enterprise-client:client-add' %}">
-            <button class="btn btn-block btn-info btn-lg">Agregar Empresa</button>
+            <button class="btn btn-block btn-info btn-lg">Agregar Cliente</button>
           </a>
         </div>
       </div>
