--- a/templates/admin/admin_client_detail.html
+++ b/templates/admin/admin_client_detail.html
@@ -19,7 +19,7 @@
             <i class="fa fa-dashboard"></i>
             Home</a>
         </li>
-        <li class="active">Empresas</li>
+        <li class="active">Cliente</li>
       </ol>
     </section>
 
@@ -31,26 +31,28 @@
       <div class="box box-solid">
         <div class="box-header with-border">
           <i class="fa fa-adjust"></i>
-          <h3 class="box-title">Información del Proyecto:  {{enterprises.name }}</h3>
+          <h3 class="box-title">Información del Cliente:  {{client.user.username }}</h3>
         </div><!-- /.box-header -->
         <div class="box-body">
           <dl class="dl-horizontal">
-            <dt>Proyecto</dt>
+            <dt>Cliente</dt>
             <dd>
               <a href="#" target="_self">
-                {{enterprises.name }}
+                {{client.user.username }}
               </a>
             </dd>
-            <dt>IoT</dt>
+            <dt>Id</dt>
             <dd>
               <a href="#" target="_self">
-                {{enterprises.id }}
+                {{client.id }}
               </a>
             </dd>
-            <dt>Tipo de Sensor</dt>
-            <dd>holo</dd>
-            <dt># del Sensor en el IoT</dt>
-            <dd>asdas</dd>
+            <dt>Empresa</dt>
+            <dd>{{ client.enterprise }}</dd>
+            <dt>Nombre</dt>
+            <dd>{{ client.user.first_name }} {{ client.user.last_name }}</dd>
+              <dt>Email</dt>
+            <dd>{{ client.user.email }}</dd>
           </dl>
         </div><!-- /.box-body -->
       </div><!-- /.box -->
@@ -64,7 +66,7 @@
     <div class="col-xs-12">
       <div class="box">
         <a href="">
-          <button class="btn btn-block btn-info btn-lg">Agregar Usuario</button>
+          <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-block btn-info btn-lg">Regresar</a>
         </a>
       </div>
     </div>
