--- a/templates/admin/admin_enterprise_edit.html
+++ b/templates/admin/admin_enterprise_edit.html
@@ -49,7 +49,7 @@
               </div>
               <!-- /.box-body -->
               <div class="box-footer">
-                <button type="reset" class="btn btn-default">Reset</button>
+                <a href="{% url 'enterprise-client:enterprise-list' %}" class="btn btn-default">Regresar</a>
                 <button type="submit" class="btn btn-primary">Agregar Empresa</button>
               </div>
               <!-- /.box-footer -->
