Updated title templates and menu names.

--- a/templates/admin/admin_clients_add.html
+++ b/templates/admin/admin_clients_add.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes -  ADD
+        CREAR NUEVO CLIENTE
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
