--- a/templates/admin/admin_clients_list.html
+++ b/templates/admin/admin_clients_list.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Empresas
+        ADMINISTRACIÓN DE CLIENTES
         <small>Listado de Clientes / Usuarios</small>
       </h1>
       <ol class="breadcrumb">
