--- a/templates/admin/admin_projects_list.html
+++ b/templates/admin/admin_projects_list.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes
+        ADMINISTRACIÓN DE PROYECTOS
         <small>LISTA DE TODOS LOS PROYECTOS</small>
 
       </h1>
