--- a/templates/client/user_projects.html
+++ b/templates/client/user_projects.html
@@ -13,7 +13,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        IoT - Dashboard - All Project
+        ADMINISTRACIÓN DE PROYECTOS ACTIVOS
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
