--- a/ticket/templates/ticket/ticket_detail.html
+++ b/ticket/templates/ticket/ticket_detail.html
@@ -10,7 +10,7 @@
 
         <section class="content-header">
             <h1>
-                Detalle del Ticket - {{ ticket.title }}
+                DETALLE DEL TICKET  - {{ ticket.title }}
                 <small> {{ ticket.queue }} </small>
             </h1>
             <ol class="breadcrumb">
