--- a/ticket/templates/ticket/ticket_edit.html
+++ b/ticket/templates/ticket/ticket_edit.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        TICKETS - AGREGAR
+        CREAR NUEVO TICKET
         <small>Control de Tickets</small>
       </h1>
       <ol class="breadcrumb">
