--- a/ticket/templates/ticket/ticket_list.html
+++ b/ticket/templates/ticket/ticket_list.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Tickets
+        ADMINISTRACIÓN DE TICKETS
         <small>Administración de Tickets</small>
       </h1>
       <ol class="breadcrumb">
