--- a/templates/admin/admin_enterprise_edit.html
+++ b/templates/admin/admin_enterprise_edit.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        EMPRESAS - AGREGAR
+        CREAR NUEVA EMPRESA
         <small>Control de Empresas</small>
       </h1>
       <ol class="breadcrumb">
