--- a/templates/admin/admin_enterprise_list.html
+++ b/templates/admin/admin_enterprise_list.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Empresas
+        ADMINISTRACIÓN DE EMPRESAS
         <small>Listado de Empresas</small>
       </h1>
       <ol class="breadcrumb">
