--- a/templates/admin/admin_projects_create.html
+++ b/templates/admin/admin_projects_create.html
@@ -10,7 +10,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes -  ADD
+        CREAR NUEVO PROYECTO
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
