--- a/templates/client/user_dashboard.html
+++ b/templates/client/user_dashboard.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        IoT - Dashboard - Main DASH
+        DASHBOARD PRINCIPAL
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
