--- a/templates/admin/admin_arduinos_create.html
+++ b/templates/admin/admin_arduinos_create.html
@@ -10,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes -  ADD
-        <small>Control panel</small>
+        AGREGAR ARDUINO AL PROYECTO
+        <small>SISTEMA</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -38,7 +38,7 @@
           {{form}}
 
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
         </form>
       </div><!-- /.box -->
@@ -48,7 +48,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Cliente</button>
+      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
     </div>
   </div>
 </div>
