--- a/templates/admin/admin_projects_list.html
+++ b/templates/admin/admin_projects_list.html
@@ -10,7 +10,7 @@
     <section class="content-header">
       <h1>
         ADMINISTRACIÓN DE PROYECTOS
-        <small>LISTA DE TODOS LOS PROYECTOS</small>
+        <small>PROYECTOS ACTIVOS</small>
 
       </h1>
       <ol class="breadcrumb">
@@ -29,9 +29,6 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="box">
-          <div class="box-header">
-            <h3 class="box-title">Lista de proyectos ACTIVOS</h3>
-          </div><!-- /.box-header -->
           <div class="box-body">
             <table id="table_projects" class="table table-bordered table-striped">
               <thead>
@@ -98,7 +95,7 @@
       <div class="col-xs-12">
         <div class="box">
           <a href="/dash/admin/projects/new/">
-            <button class="btn btn-block btn-info btn-lg">Agregar Cliente</button>
+            <button class="btn btn-block btn-info btn-lg">Agregar Proyecto</button>
           </a>
         </div>
       </div>
