--- a/ticket/templates/ticket/ticket_detail.html
+++ b/ticket/templates/ticket/ticket_detail.html
@@ -16,8 +16,7 @@
             <ol class="breadcrumb">
                 <li>
                     <a href="#">
-                        <i class="fa fa-dashboard"></i>
-                        Home</a>
+                    <i class="fa fa-dashboard"></i>Home</a>
                 </li>
                 <li class="active">Tickets</li>
             </ol>
@@ -90,7 +89,7 @@
 
 
             <div class="row">
-                <div class="col-md-10">
+                <div class="col-md-12">
                     <div class="box box-solid">
                         <div class="box-header with-border">
                             <h3 class="box-title">Comentarios del Ticket</h3>
@@ -167,7 +166,7 @@
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">×</span></button>
-              <h4 class="modal-title">Agregar Ticket</h4>
+              <h4 class="modal-title">Agregar Comentario</h4>
           </div>
           <div class="modal-body">
               <form class="form-horizontal" role="form" action="followup/" method="post"
