Inline sensor forms

--- a/dashboard/templates/admin/admin_arduinos_create.html
+++ b/dashboard/templates/admin/admin_arduinos_create.html
@@ -10,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        CREAR NUEVO PROYECTO
-        <small>Control panel</small>
+        AGREGAR ARDUINO AL PROYECTO
+        <small>SISTEMA</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -32,13 +32,13 @@
           <h3 class="box-title">Quick Example</h3>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <form role="form" action="." method="post">
+        <form role="form" action="" method="post">
           {% csrf_token %}
 
           {{form}}
 
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
         </form>
       </div><!-- /.box -->
@@ -48,12 +48,12 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Cliente</button>
+      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
     </div>
   </div>
 </div>
 
-  </section>
+    </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
