--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -1,6 +1,7 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
-{% load arduino_tags %}
+{% load widget_tweaks %}
+
 
 {% block main_content_wrapper %}
 
@@ -9,9 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes
-        <small>VIEW para borrar un elemento</small>
-
+        AGREGAR ARDUINO AL PROYECTO
+        <small>SISTEMA</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -29,27 +29,38 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Estas seguro?</h3>
+          <h3 class="box-title">Quick Example</h3>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <h1>Nombre de la empresa:  {{enterprise.name}}</h1>
-        <form role="form" action="." method="post">
+        <form role="form" action="" method="post">
           {% csrf_token %}
-
-          {{form}}
-
+          <hr>
+          <div class="arduino-form">
+            {{form}}
+          </div>
+          <hr>
+          <div class="sensor-formset">
+            {{ sensor_formset.management_form }}
+            {% for sform in sensor_formset %}
+              {{ sform }}
+              <hr>
+            {% endfor %}
+          </div>
           <div class="box-footer">
-            <a href="#">
-              <a href="{% url 'enterprise-client:enterprise-list' %}" class="btn btn-info">Cancelar</a>
-            </a>
-            <a href="#">
-              <button type="submit" class="btn btn-primary">Borrar</button>
-            </a>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
         </form>
       </div><!-- /.box -->
     </div>
   </div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <div class="box">
+      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
+    </div>
+  </div>
+</div>
 
     </section>
     <!-- /.content -->
@@ -59,10 +70,6 @@
 {% endblock main_content_wrapper %}
 
 {% block content_js %}
-  <!-- page script -->
-<script type="application/javascript">
 
-
-</script>
 
 {% endblock content_js %}
