--- a/dashboard/templates/admin/admin_enterprise_edit.html
+++ b/dashboard/templates/admin/admin_enterprise_edit.html
@@ -32,7 +32,7 @@
             </div>
             <!-- /.box-header -->
             <!-- form start -->
-              <form class="form-horizontal" role="form" action="." method="post">
+              <form class="form-horizontal" role="form" action="" method="post">
               <div class="box-body">
                   {% csrf_token %}
                   {% for field in form %}
