--- a/dashboard/templates/admin/admin_projects_delete.html
+++ b/dashboard/templates/admin/admin_projects_delete.html
@@ -1,7 +1,6 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
-{% load widget_tweaks %}
-
+{% load arduino_tags %}
 
 {% block main_content_wrapper %}
 
@@ -10,8 +9,9 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        AGREGAR ARDUINO AL PROYECTO
-        <small>SISTEMA</small>
+        Admin - Control de Clientes
+        <small>VIEW para borrar un elemento</small>
+
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -29,29 +29,27 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Quick Example</h3>
+          <h3 class="box-title">Estas seguro?</h3>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <form role="form" action="." method="post">
+        <h1>Nombre del proyecto:  {{project.name}}</h1>
+        <form role="form" action="" method="post">
           {% csrf_token %}
 
           {{form}}
 
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <a href="#">
+              <button type="cancel" class="btn btn-info">Cancelar</button>
+            </a>
+            <a href="#">
+              <button type="submit" class="btn btn-primary">Borrar</button>
+            </a>
           </div>
         </form>
       </div><!-- /.box -->
     </div>
   </div>
-
-<div class="row">
-  <div class="col-xs-12">
-    <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
-    </div>
-  </div>
-</div>
 
     </section>
     <!-- /.content -->
@@ -61,6 +59,10 @@
 {% endblock main_content_wrapper %}
 
 {% block content_js %}
+  <!-- page script -->
+<script type="application/javascript">
 
+
+</script>
 
 {% endblock content_js %}
