--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -77,7 +77,7 @@
           {% csrf_token %}
           <hr>
           <div class="arduino-form">
-
+            {{ form }}
           </div>
           <div class="row">
             <div class="sensor-formset">
@@ -108,7 +108,7 @@
 
                 <div class="col-xs-3">
                   <div class="form-group">
-                    <label for="index">Data Key:</label>
+                    <label for="datakey">Data Key:</label>
                     {% render_field sform.data_key class="form-control" %}
                   </div>
                 </div>
@@ -143,6 +143,7 @@
 
   {% block content_js %}
     <script src="{% static 'js/django-dynamic-formset/jquery.formset.js' %}"></script>
+
     $(function() {
         $('#myform').formset();
     });
