--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -31,7 +31,7 @@
       <div class="box box-solid">
         <div class="box-header with-border">
           <i class="fa fa-adjust"></i>
-          <h3 class="box-title">Información del Sistema:  <b>{{arduino.name}}</b></h3>
+          <h3 class="box-title">Información General:  <b>{{arduino.name}}</b></h3>
         </div><!-- /.box-header -->
         <div class="box-body">
           <dl class="dl-horizontal">
@@ -61,6 +61,37 @@
         </div><!-- /.box-body -->
       </div><!-- /.box -->
     </div>
+
+    <div class="col-xs-6">
+      <div class="box box-solid">
+        <div class="box-header with-border">
+          <i class="fa fa-adjust"></i>
+          <h3 class="box-title">Información del Sistema:  <b>{{arduino.name}}</b></h3>
+        </div><!-- /.box-header -->
+        <div class="box-body">
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="sistema_name">Nombre:</label>
+              {% render_field form.name class="form-control" %}
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="sistema_location">Ubicación:</label>
+              {% render_field form.location class="form-control" %}
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="sistema_project">Proyecto:</label>
+              {% render_field form.project class="form-control" %}
+            </div>
+          </div>
+        </div><!-- /.box-body -->
+      </div><!-- /.box -->
+    </div>
+
+
   </div><!-- /.row -->
 
 
