jQuery formset implementation v2

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
   {% block extra_header_js %}
   {% endblock  %}
 
+  {% block content_css %}
+  {% endblock content_css %}
+
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
