--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -109,6 +109,7 @@
 
               {% for sform in sensor_formset %}
                 <div class="sensor-form" >
+
                 <div class="col-xs-3">
                   <div class="form-group">
                     <label for="sensor_type">Tipo Sensor:</label>
@@ -133,20 +134,20 @@
                   </div>
                 </div>
 
-                <div class="col-xs-3">
+                <div class="col-xs-2">
                   <div class="form-group">
                     <label for="datakey">Data Key:</label>
                     {% render_field sform.data_key class="form-control" %}
                     <label for="sensor_type_error">{{ sform.data_key.errors }}</label>
                   </div>
                 </div>
-                </div>
 
+              </div>
               {% endfor %}
             </div>
           </div>
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+
           </div>
 
       </div><!-- /.box -->
@@ -154,11 +155,10 @@
   </div>
 
 <div class="row">
-  <div class="col-xs-12">
-    <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
-    </div>
+  <div class="col-xs-6 col-xs-offset-3">
+    <button type="submit" class="btn btn-block btn-primary btn-lg">Guardar Cambios</button>
   </div>
+
 </div>
 
   </form>
@@ -167,9 +167,15 @@
   </div>
   <!-- /.content-wrapper -->
 
+{% block content_css %}
+  <style type="text/css">
+  .add-row{
+    border:1px solid red;
+  }
+  </style>
+{% endblock content_css %}
+
 {% endblock main_content_wrapper %}
-
-
 
   {% block content_js %}
     <script src="{% static 'js/django-dynamic-formset/jquery.formset.js' %}"></script>
