--- a/dashboard/templates/admin/admin_arduinos_create.html
+++ b/dashboard/templates/admin/admin_arduinos_create.html
@@ -10,7 +10,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        AGREGAR ARDUINO AL PROYECTO
+        Admin - Sistema  - {% if form.initial %} Editar {% else %} Crear Nuevo {% endif %}
         <small>SISTEMA</small>
       </h1>
       <ol class="breadcrumb">
@@ -29,18 +29,33 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Quick Example</h3>
+          <h3 class="box-title">
+            {% if form.initial %} Editar {% else %} Crear Nuevo {% endif %} Sistema</h3>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <form role="form" action="" method="post">
-          {% csrf_token %}
+        <form class="form-horizontal" role="form" action="" method="post">
+        <div class="box-body">
+            {% csrf_token %}
+            {% for field in form %}
 
-          {{form}}
+            <div class="form-group">
+                <label for="{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+                <div class="col-sm-8">
+                   {% render_field field class="form-control" %}
+                </div>
+                <div class="col-sm-offset-2 col-sm-8">
+                   {{field.errors}}
+                </div>
+            </div>
 
-          <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </div>
-        </form>
+            {% endfor %}
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+          <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-default">Regresar</a>
+        </div>
+        <!-- /.box-footer -->
+
       </div><!-- /.box -->
     </div>
   </div>
@@ -48,10 +63,14 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
+      <button type="submit" class="btn btn-block btn-info btn-lg">
+        Guardar Cambios
+      </button>
     </div>
   </div>
 </div>
+
+</form>
 
     </section>
     <!-- /.content -->
