--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -10,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        SENSORES DEL SISTEMA
-        <small>LISTA DE SENSORES</small>
+        Admin - Sistema - Detalle
+        <small>Detalle del Sistema</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -95,22 +95,33 @@
 
   <div class="row">
     <div class="col-xs-12">
+
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">SENSORES DEL SISTEMA INSTALADO</h3>
+          <h3 class="box-title">
+            Sensores del Sistema
+          </h3>
         </div><!-- /.box-header -->
 
         <!-- form start  {{form}} -->
 
           {% csrf_token %}
-          <div class="row">
             <div class="sensor-formset">
               {{ sensor_formset.management_form }}
 
-              {% for sform in sensor_formset %}
-                <div class="sensor-form" >
 
-                <div class="col-xs-3">
+              {% for sform in sensor_formset %}
+
+
+
+              <!-- //Ver si puedes contar el ultimo para arreglar el add sensor -->
+
+
+              <div class="row">
+              <div class="sensor-form" >
+
+
+                <div class="col-xs-2">
                   <div class="form-group">
                     <label for="sensor_type">Tipo Sensor:</label>
                     {% render_field sform.sensor_type class="form-control" %}
@@ -118,7 +129,23 @@
                   </div>
                 </div>
 
-                <div class="col-xs-3">
+                <div class="col-xs-2">
+                  <div class="form-group">
+                    <label for="sensor_type">Valor Maximo:</label>
+                    {% render_field sform.max_value class="form-control" %}
+                    <label for="sensor_type_error">{{ sform.sensor_type.errors }}</label>
+                  </div>
+                </div>
+
+                <div class="col-xs-2">
+                  <div class="form-group">
+                    <label for="sensor_type">Valor Minimo:</label>
+                    {% render_field sform.min_value class="form-control" %}
+                    <label for="sensor_type_error">{{ sform.sensor_type.errors }}</label>
+                  </div>
+                </div>
+
+                <div class="col-xs-2">
                   <div class="form-group">
                     <label for="description">Descripcion:</label>
                     {% render_field sform.description class="form-control" %}
@@ -126,7 +153,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-3">
+                <div class="col-xs-1">
                   <div class="form-group">
                     <label for="index">Indice: </label>
                     {% render_field sform.index class="form-control" %}
@@ -134,7 +161,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-2">
+                <div class="col-xs-1">
                   <div class="form-group">
                     <label for="datakey">Data Key:</label>
                     {% render_field sform.data_key class="form-control" %}
@@ -143,14 +170,16 @@
                 </div>
 
               </div>
+              </div>
+
               {% endfor %}
             </div>
+
           </div>
           <div class="box-footer">
 
           </div>
 
-      </div><!-- /.box -->
     </div>
   </div>
 
@@ -169,9 +198,7 @@
 
 {% block content_css %}
   <style type="text/css">
-  .add-row{
-    border:1px solid red;
-  }
+
   </style>
 {% endblock content_css %}
 
@@ -183,7 +210,7 @@
       <script type="application/javascript">
       $(function() {
         $('.sensor-form').formset({
-            addText: 'Agregar sensor',
+            addText: 'Agregar Sensor',
             deleteText: 'Quitar'
         });
     });
