--- a/dashboard/templates/admin/admin_client_edit.html
+++ b/dashboard/templates/admin/admin_client_edit.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Clientes - {% if form.initial %} Actualizar {% else %} AGREGAR {% endif %}
+        Admin - Cliente  - {% if form.initial %} Editar {% else %} Crear Nuevo {% endif %}
         <small>Control de Clientes</small>
       </h1>
       <ol class="breadcrumb">
@@ -17,7 +17,11 @@
             <i class="fa fa-dashboard"></i>
             Home</a>
         </li>
-        <li class="active">Clientes</li>
+        <li class="active">
+          <a href="#" target="_self">
+            Lista de Clientes
+          </a>
+        </li>
       </ol>
     </section>
 
@@ -28,7 +32,9 @@
         <div class="col-xs-10">
           <div class="box box-info">
             <div class="box-header with-border">
-              <h3 class="box-title">{% if form.initial %}Actualizar {% else %}Crear {% endif %} Cliente</h3>
+              <h3 class="box-title">
+                {% if form.initial %} Actualizar {% else %} Crear {% endif %} Cliente
+              </h3>
             </div>
             <!-- /.box-header -->
             <!-- form start -->
@@ -50,7 +56,7 @@
               <!-- /.box-body -->
               <div class="box-footer">
                 <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-default">Regresar</a>
-                <button type="submit" class="btn btn-primary">{% if form.initial %}Actualizar {% else %}AGREGAR {% endif %} Cliente</button>
+                <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Cliente</button>
               </div>
               <!-- /.box-footer -->
             </form>
