--- a/dashboard/templates/admin/admin_enterprise_delete.html
+++ b/dashboard/templates/admin/admin_enterprise_delete.html
@@ -9,8 +9,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Clientes
-        <small>VIEW para borrar un elemento</small>
+        Admin - BORRADO DE EMPRESA
+        <small>BORRADO DE EMPRESA</small>
 
       </h1>
       <ol class="breadcrumb">
@@ -19,7 +19,13 @@
             <i class="fa fa-dashboard"></i>
             Home</a>
         </li>
-        <li class="active">Dashboard</li>
+        <li class="active">
+          <a href="#" target="_self">
+            Lista de Empresas
+          </a>
+        </li>
+        <li class="active"> Empresa  <b>{{enterprise.name }}</b></li>
+
       </ol>
     </section>
 
@@ -29,10 +35,20 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Estas seguro?</h3>
+          <h3 class="box-title">
+            <b> IMPORTANTE:</b>
+          </h3>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <h1>Nombre de la empresa:  {{enterprise.name}}</h1>
+        <h1 class="color_red">Estas a punto de borrar la empresa y su información:</h1>
+
+        <h2>Empresa:      <b> {{enterprise.name}} </b> </h2>
+
+        </br>
+        <b><h4>
+          ¿Estas seguro?
+        </h4> </b>
+
         <form role="form" action="" method="post">
           {% csrf_token %}
 
@@ -43,7 +59,7 @@
               <a href="{% url 'enterprise-client:enterprise-list' %}" class="btn btn-info">Cancelar</a>
             </a>
             <a href="#">
-              <button type="submit" class="btn btn-primary">Borrar</button>
+              <button type="submit" class="btn btn-danger">Borrar</button>
             </a>
           </div>
         </form>
