--- a/dashboard/templates/admin/admin_enterprise_list.html
+++ b/dashboard/templates/admin/admin_enterprise_list.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMINISTRACIÓN DE EMPRESAS
+        ADMIN - ADMINISTRACIÓN DE EMPRESAS
         <small>Listado de Empresas</small>
       </h1>
       <ol class="breadcrumb">
@@ -29,7 +29,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Lista de proyectos enterprise_list</h3>
+            <h3 class="box-title">Lista de Empresas</h3>
           </div><!-- /.box-header -->
           <div class="box-body">
             <table id="table_projects" class="table table-bordered table-striped">
@@ -66,6 +66,9 @@
                       </a>
                       <a href="/dash/admin/enterprises/delete/{{enterprise.id}}" target="_self">
                         <button type="button" class="btn btn-danger">Borrar</button>
+                      </a>
+                      <a href="/dash/admin/enterprises/edit/{{enterprise.id}}" target="_self">
+                        <button type="button" class="btn btn-warning">Contactos</button>
                       </a>
                     </div>
                   </td>
