--- a/dashboard/templates/admin/admin_projects_create.html
+++ b/dashboard/templates/admin/admin_projects_create.html
@@ -10,8 +10,9 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        CREAR NUEVO PROYECTO
-        <small>Control panel</small>
+        ADMIN - {% if form.initial %} EDITAR {% else %} CREAR {% endif %}
+         - PROYECTO
+        <small>Proyectos</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -19,7 +20,11 @@
             <i class="fa fa-dashboard"></i>
             Home</a>
         </li>
-        <li class="active">Dashboard</li>
+        <li class="active">
+          <a href="#" target="_self">
+            Lista de Proyectos
+          </a>
+        </li>
       </ol>
     </section>
 
@@ -29,29 +34,37 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Quick Example</h3>
+          <h3 class="box-title">Formulario para Proyectos</h3>
         </div><!-- /.box-header -->
+
         <!-- form start -->
-        <form role="form" action="" method="post">
-          {% csrf_token %}
+        <form class="form-horizontal" role="form" action="" method="post">
+        <div class="box-body">
+            {% csrf_token %}
+            {% for field in form %}
 
-          {{form}}
+            <div class="form-group">
+                <label for="{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+                <div class="col-sm-10">
+                   {% render_field field class="form-control" %}
+                </div>
+                <div class="col-sm-offset-2 col-sm-8">
+                   {{field.errors}}
+                </div>
+            </div>
 
-          <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
+            {% endfor %}
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+          <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-default">Regresar</a>
+          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Cliente</button>
+        </div>
+        <!-- /.box-footer -->
         </form>
       </div><!-- /.box -->
     </div>
   </div>
-
-<div class="row">
-  <div class="col-xs-12">
-    <div class="box">
-      <button class="btn btn-block btn-info btn-lg">Agregar Cliente</button>
-    </div>
-  </div>
-</div>
 
   </section>
     <!-- /.content -->
