--- a/dashboard/templates/admin/admin_projects_detail.html
+++ b/dashboard/templates/admin/admin_projects_detail.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        DETALLE DEL PROYECTO
+        ADMIN - PROYECTO -  DETALLE -  {{project.name }}
         <small>LISTA DE SISTEMAS EN EL PROYECTO</small>
 
       </h1>
@@ -62,7 +62,7 @@
   <div class="col-xs-12">
     <div class="box">
       <div class="box-header">
-        <h3 class="box-title">Lista de SISTEMAS</h3>
+        <h3 class="box-title">Lista d Sistemas Instalados</h3>
       </div><!-- /.box-header -->
       <div class="box-body">
         <table id="table_projects" class="table table-bordered table-striped">
@@ -107,8 +107,8 @@
 
             </tr>
             {% endfor %}
-
           </tbody>
+          
           <tfoot>
             <tr>
               <th>ID Sistema</th>
@@ -129,7 +129,7 @@
   <div class="col-xs-12">
     <div class="box">
       <a href="{% url 'newArduino' project_pk=project.id %}">
-        <button class="btn btn-block btn-info btn-lg">Agregar Arduino</button>
+        <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
       </a>
     </div>
   </div>
